// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CodeViews CodeStatusbar displays no statusBarMessage 1`] = `
<div>
  <div
    class="sc-Rmtcm keiynT"
  >
    <div
      class="sc-jnlKLf iTDaaZ"
    />
  </div>
</div>
`;

exports[`CodeViews CodeStatusbar displays statusBarMessage 1`] = `
<div>
  <div
    class="sc-Rmtcm keiynT"
  >
    <div
      class="sc-jnlKLf iTDaaZ"
    >
      Started streaming 1 records after 5 ms and completed after 10  ms.
    </div>
  </div>
</div>
`;

exports[`CodeViews CodeView displays nothing if not successful query 1`] = `<div />`;

exports[`CodeViews CodeView displays request and response info if successful query 1`] = `
<div>
  <div
    class="sc-kpOJdX AAFub"
  >
    <table
      class="sc-ksYbfQ jbfCSv"
    >
      <tbody
        class="sc-hmzhuo cslRIF"
      >
        <tr
          class="sc-kvZOFW hiWmvJ"
        >
          <td
            class="sc-hqyNC kabKpk"
          >
            Server version
          </td>
          <td
            class="sc-jbKcbu cWSlbe"
          >
            xx1
          </td>
        </tr>
        <tr
          class="sc-kvZOFW hiWmvJ"
        >
          <td
            class="sc-hqyNC kabKpk"
          >
            Server address
          </td>
          <td
            class="sc-jbKcbu cWSlbe"
          >
            xx2
          </td>
        </tr>
        <tr
          class="sc-kvZOFW hiWmvJ"
        >
          <td
            class="sc-hqyNC kabKpk"
          >
            Query
          </td>
          <td
            class="sc-jbKcbu cWSlbe"
          >
            MATCH xx0
          </td>
        </tr>
        <tr
          class="sc-kvZOFW hiWmvJ"
        >
          <td
            class="sc-hqyNC kabKpk"
          >
            Summary
            <div
              class="sc-frDJqD dITNWO fa fa-caret-right"
              title="Expand section"
            />
          </td>
          <td
            class="sc-jbKcbu cWSlbe"
          >
            {,  "server": {,    "version": "xx1", ...
          </td>
        </tr>
        <tr
          class="sc-kvZOFW hiWmvJ"
        >
          <td
            class="sc-hqyNC kabKpk"
          >
            Response
            <div
              class="sc-frDJqD dITNWO fa fa-caret-right"
              title="Expand section"
            />
          </td>
          <td
            class="sc-jbKcbu cWSlbe"
          >
            [,  {,    "res": "xx3" ...
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
